source/_posts/2012-11-16-install-octopress-on-arch.markdown~
---
layout: post
title: "install_octopress_on_arch"
date: 2012-11-16 15:01
comments: true
categories: [octopress, archlinux]
---
###install rvm on archlinux


#1.安装 git
$ sudo pacman -S git

#2.安装 rvm[2]
$ curl https://raw.github.com/wayneeseguin/rvm/master/binscripts/rvm-installer | bash -s stable

#3.在 .bashrc/.zshrc 加入RVM函数
$ echo '[[ -s $HOME/.rvm/scripts/rvm ]] && source $HOME/.rvm/scripts/rvm' >> ~/.zshrc
source ~/.zshrc

#4.根据安装脚本提示输入
$ source /home/jamel/.rvm/scripts/rvm

#5.安装依赖包（下面命令会输出一个指南，直接复制其中的命令就行）:
$ rvm requirements

Result:
```
To install rbx and/or Ruby 1.9 head (MRI) (eg. 1.9.2-head),
then you must install and use rvm 1.8.7 first.

Additional Dependencies:
# For Ruby / Ruby HEAD (MRI, Rubinius, & REE), install the following:
  ruby: pacman -Sy --noconfirm gcc patch curl zlib readline libxml2 libxslt git autoconf automake diffutils make libtool bison subversion

# For JRuby, install the following:
  jruby: pacman -Sy --noconfirm jdk7-openjdk jre7-openjdk curl
  jruby-head: pacman -Sy apache-ant

# For IronRuby, install the following:
  ironruby: pacman -Sy --noconfirm mono
```

#6.根据上面的"For Ruby"的命令提示输入命令：
$ pacman -Sy --noconfirm gcc patch curl zlib readline libxml2 libxslt git autoconf automake diffutils make libtool bison subversion

#7.安装ruby 1.9.2并使用
$ rvm install 1.9.2 && rvm use 1.9.2

#8.保持rubygems最新
$ rvm rubygems latest

#9.检查ruby版本是否为1.9.2
$ ruby -v

##安装Octopress

# clone octopress
$ git clone https://github.com/imathis/octopress.git octopress
$ cd octopress
# 安装依赖
$ gem install bundler
$ bundle install
# 安装默认主题
$ rake install
# 设定octopress，参见[4]
# ......
# 生成博客
$ rake generate #生成
$ rake watch    #实时观察变更
$ rake preview  #在http://localhost:4000上预览
# 配置github
$ rake setup_github_pages #按提示操作即可
# 推送博客
$ rake deploy
# 或者
$ rake push

##Bugs

  1. rake generate时报错

    rake aborted!
    You have already activated rake 0.9.2.2, but your Gemfile requires rake 0.9.2. Using bundle exec may solve this.

    这是因为Gemfile.lock不更新的原因，用bundle update可更新，但octopress不推荐更新Gemfile.lock。解决办法是用以下命令来替代：

    # 其他rake命令也要如此，直到上游更新了Gemfile.lock。
    bundle exec rake generate

   2. 其余可能出现的bug：
        http://blog.gonzih.org/blog/2011/09/21/fix-octopress-pygments-error-on-arch-linux/
        http://jgarber.lighthouseapp.com/projects/13054/tickets/245-error-installing-redcloth-428

##Bugs Solution
下面这些是我花了一两个小时才解决了一些冲突问题。
首先输入rake install后出现了这个问题：
    You have already activated rake 10.0.1, but your Gemfile requires rake 0.9.2. Using bundle exec may solve this.
经过搜索，可以这样解决

	rvm use @global && gem uninstall rake -v 10.0.1  
	rvm use @ && gem uninstall rake -v 10.0.1
原理就是停止当前正在激活的rake, 然后再删除它。

然后又出现了新的问题
	File "<string>", line 1
	    import sys; print sys.executable
	                        ^
	SyntaxError: invalid syntax
在这个网站<http://blog.dayanjia.com/2012/04/fix-rubypython-bug-in-arch-linux/>中发现了原来是python2和python3的冲突问题，晕...archlinux用的是python3，而octopress默认用的是python2
	然后照着教程在plugins下新建一个newfile.rv文件，内容如下：

	require 'pygments'
	
	if !!RUBY_PLATFORM['linux']
	    RubyPython.configure :python_exe => '/usr/bin/python2.7'
	end

然而却出现了这样的问题：
LoadError: Could not open library 'lib.so': lib.so: cannot open shared object file: No such file or directory
 
这个问题在<https://github.com/tmm1/pygments.rb/issues/10>中有描述，看得很辛苦，测试了许多种方法（汗，居然没人总结该怎么做）后发现如果在ubuntu中可以安装python-devel后可能再建一些符号连接即可，然而在arch中没有devel包的。尝试了许久，最后发现只要在Gemfile中更改
	gem 'pygments.rb', '~> 0.2.12'
为：
	gem 'pygments.rb', '~> 0.3.2'
即可。连plugins下的那个rb文件都可以不用。

也听了讨论组的人所说，卸载原来的rubypython，换了最新版本的rubypython但发现这样一点用也没有。。
